# Api-Gateway

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api_gateway_chart/: .helmignore  Chart.yaml  values.yaml
api_gateway_chart/templates/: NOTES.txt  _helpers.tpl
db/: auth_service_query.txt  face_verification_query.txt  transaction_query.txt  transactions_query.txt
kuber/: deployment-api-gateway.yaml  secret-api-gateway.yaml  service-api-gateway.yaml  service-kafka-bd.yaml
services/: common_base.py
src/app/: common.py  database.py  main.py  routers.py
src/tests/: test_common.py
src/tests/integration_tests/: test_common.py
