[tool.pytest.ini_options]

[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Ivashko Irina <ira.ivashko.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
requests = "^2.32.3"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"
fastapi = "^0.112.0"
httpx = "^0.27.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
